--- a/drawingApp/client/start.html
+++ b/drawingApp/client/start.html
@@ -5,4 +5,45 @@
 </template>
 
 <template name="start">
+	<div class="container marginTop">
+		{{> colorModal}}
+		<br><br>
+		<label>
+			Last selected color: 
+		</label>
+		{{selectedColor}}
+	</div>
+</template>
+
+<template name="colorModal">
+	<!-- Trigger the modal with a button -->
+ 	<button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">
+ 		Color Picker
+ 	</button>
+
+  	<!-- Modal -->
+  	<div class="modal fade" id="myModal" role="dialog">
+    	<div class="modal-dialog">
+      		<!-- Modal content-->
+      		<div class="modal-content">
+        		<div class="modal-header">
+          			<button type="button" class="close" data-dismiss="modal">&times;</button>
+          			<h4 class="modal-title">Color Picker</h4>
+        		</div>
+        		<div class="modal-body">
+        			<label for="colorpicker">find a color here</label>
+          			<div class="input-group demo1">
+					    <input type="text" id="colorpicker" class="form-control" />
+					    <span class="input-group-addon"><i></i></span>
+					</div>
+        		</div>
+        		<div class="modal-footer">
+        			<div class="btn-group" role="group" aria-label="...">
+          				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          				<button type="button" class="btn btn-primary js-add-color" data-dismiss="modal">Add a Color</button>
+          			</div>
+        		</div>
+      		</div>
+      	</div>
+  	</div>
 </template>
