--- a/drawingApp/client/start.html
+++ b/drawingApp/client/start.html
@@ -5,6 +5,10 @@
 </template>
 
 <template name="start">
+	{{> toolbox}}
+</template>
+
+<template name="toolbox">
 	<div class="container marginTop">
 		<div class="row">
 			<div class="col-md-3">
