--- a/drawingApp/client/start.html
+++ b/drawingApp/client/start.html
@@ -34,19 +34,19 @@
 	<!-- Trigger the modal with a button -->
  	{{#if currentUser}}
  		<div class="btn-group" role="group" aria-label="...">
-	 		<button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">
+	 		<button type="button" class="btn btn-default colorBtn backgroundCol" data-toggle="modal" data-target="#myModal">
 		 		<label>
 		 			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 		 			Add
 		 		</label> 
 		 	</button>
-		 	<button type="button" class="btn btn-default js-restore-colors">
+		 	<button type="button" class="btn btn-default js-restore-colors colorBtn backgroundCol">
 		 		<label>
 		 			<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 		 			Restore
 		 		</label> 
 		 	</button>
-		 	<button type="button" class="btn btn-default js-save-colors">
+		 	<button type="button" class="btn btn-default js-save-colors colorBtn backgroundCol">
 		 		<label>
 		 			<span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
 		 			Save
@@ -72,14 +72,23 @@
 		</div>
  	{{else}}
  		<div class="btn-group" role="group" aria-label="...">
-	 		<button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal" disabled="disabled">
-		 		Add 
+	 		<button type="button" class="btn btn-default colorBtn backgroundCol" data-toggle="modal" data-target="#myModal" disabled="disabled">
+		 		<label>
+		 			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+		 			Add
+		 		</label> 
 		 	</button>
-		 	<button type="button" class="btn btn-default" disabled="disabled">
-		 		Restore 
+		 	<button type="button" class="btn btn-default colorBtn backgroundCol" disabled="disabled">
+		 		<label>
+		 			<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+		 			Restore
+		 		</label>  
 		 	</button>
-		 	<button type="button" class="btn btn-default" disabled="disabled">
-		 		Save 
+		 	<button type="button" class="btn btn-default colorBtn backgroundCol" disabled="disabled">
+		 		<label>
+		 			<span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+		 			Save
+		 		</label>  
 		 	</button>
 		</div>
 		<div class="alert" role="alert">
@@ -117,7 +126,21 @@
 
 <template name="nextBtnAtStart">
 	<div class="container">
-		<a class="btn btn-default" href="/draw" role="button" id="nextBtnAtStart">Next</a>
+		{{#if currentUser}}
+			<a class="btn btn-default" href="/draw" role="button" id="nextBtnAtStart">
+				<label>
+					Next
+					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				</label>
+			</a>
+		{{else}}
+			<a class="btn btn-default" href="/draw" role="button" id="nextBtnAtStart" onclick="return false;" disabled="disabled">
+				<label>
+					Next
+					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				</label>
+			</a>
+		{{/if}}
 	</div>
 </template>
 
