--- a/drawingApp/client/main.html
+++ b/drawingApp/client/main.html
@@ -3,7 +3,11 @@
         <div class="container text-center">
             <h1>IDRAWING</h1>
             <p>An interactive, online graffiti wall <br> where users can collaborate to create graphics.</p>
-            <a class="btn btn-default" href="/start" role="button">Get Started</a>
+            <a class="btn btn-default btn-lg" href="/start" role="button">
+                <label>
+                    Get Started
+                </label>
+            </a>
         </div>
     </div>
 </template>
