Add feature - changing brush size

--- a/drawingApp/client/start.html
+++ b/drawingApp/client/start.html
@@ -66,6 +66,9 @@
 					Click the Save button to save the newly created color set in the database.
 				</li>
 				<li>
+					Warning: refresing page causes the lost of unsaved data!
+				</li>
+				<li>
 					Warning: the current system does not support deletion, so please think carefully before you save colors to the database!
 				</li>
 			</ul>
