--- a/drawingApp/client/draw.html
+++ b/drawingApp/client/draw.html
@@ -53,9 +53,20 @@
 </template>
 
 <template name="drawPanel">
-	<div class="container marginBtmII marginTop">
+	<div class="container marginBtmII">
+		<div class="row">
+			<div class="col-md-offset-8 col-md-3">
+				<div class="form-group">
+                	<label for="size" class="">Choose Brush Size [range: 1 - 50]</label>
+                	<select class="form-control js-select-brush-size" id="size">
+                        {{#each brushSizes}}
+                        	<option>{{size}}</option>
+                        {{/each}}
+                  	</select>
+                </div>
+			</div>
+		</div>
 		<div id="canvas">
-			
 		</div>
 	</div>
 </template>
