Set up for last new feature in v1.0 - save - issue #2

--- a/drawingApp/client/draw.html
+++ b/drawingApp/client/draw.html
@@ -22,6 +22,10 @@
 						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 				  		<label>Start/Reset</label>
 				  	</a>
+				  	<a type="button" class="btn btn-default colorBtn backgroundCol btns js-save-graph">
+						<span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+				  		<label>Save</label>
+				  	</a>
 				</div>
 				<div class="btn-group backgroundCol" role="group" aria-label="...">
 				  	{{#each selectedColors}}
