--- a/drawingApp/client/draw.html
+++ b/drawingApp/client/draw.html
@@ -22,9 +22,9 @@
 						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 				  		<label>Start/Reset</label>
 				  	</a>
-				  	<a type="button" class="btn btn-default colorBtn backgroundCol btns js-save-graph">
-						<span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
-				  		<label>Save</label>
+				  	<a type="button" class="btn btn-default colorBtn backgroundCol btns js-export-graph">
+						<span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+				  		<label>Export</label>
 				  	</a>
 				</div>
 				<div class="btn-group backgroundCol" role="group" aria-label="...">
@@ -44,6 +44,9 @@
 				</li>
 				<li>
 					Click the Start/Reset button to open up or reset the canvas
+				</li>
+				<li>
+					Click the Export button to save current graph as image, and scroll down to see the image display.
 				</li>
 				<li>
 					Click any button with a color to use the corresponding color
@@ -91,6 +94,15 @@
 			</div>
 		</div>
 		<div id="canvas">
+		</div>
+
+		<div>
+			<div class="page-header">
+				<h4>Image</h4>
+			</div>
+			<div id="display">
+				
+			</div>
 		</div>
 	</div>
 </template>
